2025-04-19  Bruno Haible  <bruno@clisp.org>

	Optimize: Use a hash table in compute_partition.
	This reduces the execution time of gperf on large inputs by ca. 30%.
	* autogen.sh (GNULIB_MODULES): Add map-c++, hash-map.
	* src/keyword.h: Include <stddef.h>.
	(struct KeywordExt): Add fields _undetermined_chars,
	_undetermined_chars_length, _undetermined_chars_hashcode.
	* src/search.cc: Include gl_map.hh, gl_hash_map.h.
	(Search::prepare_asso_values): Initialize the _undetermined_chars field.
	(struct EquivalenceClass): Remove the fields _undetermined_chars,
	_undetermined_chars_length.
	(undetermined_equals, undetermined_hashcode): New functions.
	(Search::compute_partition): Initialize the _undetermined_chars* fields
	of all keywords. Use a hash map instead of a loop over the equivalence
	classes.
	(Search::find_good_asso_values): Deallocate the _undetermined_chars field.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	Optimize: Make Bool_Array take less memory.
	Less memory means: less cache misses.
	This reduces the execution time of gperf on large inputs by ca. 2.5%.
	* src/bool-array.h (Bool_Array): For the _storage_array and
	_iteration_number fields, use 'unsigned char' instead of 'unsigned int'.
	* src/bool-array.icc (Bool_Array::Bool_Array, Bool_Array::clear: Update.
	* src/bool-array.cc (Bool_Array::~Bool_Array): Update.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	tests: Add unit test with many keywords.
	* tests/generate-5000.sh: New file.
	* tests/5000.gperf: New generated file.
	* tests/5000.exp: New generated file.
	* tests/Makefile.in (SOURCE_FILES): Add them.
	(check-large): New rule.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	build: Update dependencies after 2025-04-16 change.
	* src/Makefile.in (*.$(OBJEXT)): Depend on $(CONFIG_H).

2025-04-17  Bruno Haible  <bruno@clisp.org>

	Improve comments.
	* src/search.cc: Fix comments.

2025-04-16  Bruno Haible  <bruno@clisp.org>

	build: Update after gnulib changed.